Add unit tests for PoolManager and WaveSystem
- Implemented comprehensive unit tests for PoolManager, covering zombie pool registration, retrieval, release, and performance scenarios.
- Created mock classes to simulate Phaser dependencies for testing purposes.
- Added unit tests for WaveSystem, validating wave configuration generation, zombie count, door activation, and available zombie types.
- Ensured tests cover various game progression scenarios to validate game balance and mechanics.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "tsc --noEmit && vite build",
     "preview": "vite preview",
     "test": "vitest",
+    "test:unit": "vitest run tests/unit",
+    "test:unit:watch": "vitest tests/unit",
+    "test:unit:coverage": "vitest run tests/unit --coverage",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
