feat: Implement tactical behaviors for zombies with horde management
- Added TacticalBehaviors class to manage zombie tactics including roles like frontal attack, flanking, and encircling.
- Introduced TacticalRole enum for defining various tactical roles.
- Created TacticalConfig interface for configuring tactical behaviors.
- Integrated TacticalBehaviors with Zombie and ZombieStateMachine for coordinated group actions.
- Enhanced ZombieFactory to automatically configure horde mode for newly created zombies.
- Updated GameScene to initialize and manage HordeManager and TacticalBehaviors.
- Implemented group chase behavior in ZombieStateMachine for coordinated zombie movements.
- Added methods for applying buffs and managing tactical roles within the horde.
- Updated TypeScript configuration to include new AI module paths.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
       "@ui/*": ["./src/ui/*"],
       "@managers/*": ["./src/managers/*"],
       "@utils/*": ["./src/utils/*"],
-      "@types/*": ["./src/types/*"]
+      "@types/*": ["./src/types/*"],
+      "@ai/*": ["./src/ai/*"]
     },
     "baseUrl": "."
   },
