feat(debug): implement debug panel and spawner for testing
- Added DebugPanel for UI controls to spawn zombies, give weapons, and manage game state.
- Introduced DebugSpawner to handle zombie and item spawning in debug mode.
- Created DebugScene to integrate debug functionalities into the game.
- Enhanced Player class with God mode and weapon management for debugging.
- Updated WaveSystem to allow skipping to the next wave and setting wave numbers directly.
- Integrated debug features into GameScene for development environment.
- Added necessary imports and exports for debug functionalities in the project structure.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
       "@managers/*": ["./src/managers/*"],
       "@utils/*": ["./src/utils/*"],
       "@types/*": ["./src/types/*"],
-      "@ai/*": ["./src/ai/*"]
+      "@ai/*": ["./src/ai/*"],
+      "@debug/*": ["./src/debug/*"]
     },
     "baseUrl": "."
   },
