feat: Implement Campaign and Daily Challenge modes (Phase 8.2)
- Added CampaignManager to handle campaign levels, objectives, and victory conditions.
- Introduced DailyChallengeManager for generating daily challenges with unique modifiers.
- Updated GameScene to initialize and manage game modes, including campaign and daily challenges.
- Enhanced WaveSystem to support maximum waves for campaign mode.
- Created types and interfaces for game modes, including campaign and daily challenge configurations.
- Updated ModeSelectScene to display high scores and descriptions for each game mode.
- Added necessary event listeners and cleanup methods for managing game state transitions.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
       "@utils/*": ["./src/utils/*"],
       "@types/*": ["./src/types/*"],
       "@ai/*": ["./src/ai/*"],
-      "@debug/*": ["./src/debug/*"]
+      "@debug/*": ["./src/debug/*"],
+      "@modes/*": ["./src/modes/*"]
     },
     "baseUrl": "."
   },
